# pagegraph-query

./: README.md  README.txt  changelog.md  check.sh  lint.sh  mypy.ini  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test.py  tests.py
assets/graphs/: attrs_basic.graphml  attrs_delete.graphml  iframe:basic.graphml  iframes_about-blank.graphml  iframes_navigation.graphml  iframes_sub-document.graphml  localstorage_basic.graphml  localstorage_complicated.graphml  localstorage_cross-frame.graphml  script_cross-dom.graphml  script_js-calls.graphml
assets/html/: attrs_delete.html  iframe:basic.html  iframes_about-blank.html  iframes_navigation.html  iframes_sub-document.html  localstorage_basic.html  localstorage_complicated.html
assets/html/assets/: blank-frame.html  localstorage-stress.js
pagegraph/: __init__.py  commands.py  graphml.py  io.py  misc_utils.py  queries.py  serialize.py  types.py  urls.py  util.py  utils.py  versions.py
pagegraph/commands/: __init__.py  element.py  html.py  js_calls.py  requests.py  scripts.py  subframes.py  unknown.py  validate.py
pagegraph/graph/: __init__.py  edge.py  element.py  js.py  node.py  requests.py  serialize.py  type_map.py  types.py
pagegraph/graph/edge/: __init__.py  attribute.py  attribute_delete.py  attribute_set.py  cross_dom.py  document.py  event_listener.py  event_listener_add.py  event_listener_fired.py  event_listener_remove.py  execute.py  js_call.py  (+19 more)
pagegraph/tests/: __init__.py  attrs.py  iframes.py  localstorage.py  script.py  subframes.py
src/pagegraph/: __init__.py  graphml.py  serialize.py  types.py  versions.py
tests/cases/: attrs.py  iframes.py  localstorage.py  requests.py  script.py
tests/commands/: __init__.py  cases.py  crawl.py  server.py
tests/util/: filter.py  paths.py
(+123 files in other folders)
