[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagegraph-query"
description = "CLI tool tool for querying PageGraph (GraphML format) files."
authors  = [
    { name = "Peter Snyder", email = "pes@peteresnyder.com" },
]
readme = "README.md"
version = "0.10.3"
license = "MIT"
dependencies = [
    "networkx",
    "packaging",
    "publicsuffix2"
]
keywords = [
    "brave",
    "pagegraph",
    "browser",
    "graphml",
    "xml"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Text Processing :: Markup :: XML"
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "/src",
  "run.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pagegraph"]

[project.urls]
Changelog = "https://github.com/brave-experiments/pagegraph-query/blob/main/changelog.md"
Homepage = "https://github.com/brave/brave-browser/wiki/PageGraph"
Issues = "https://github.com/brave-experiments/pagegraph-query/issues"
Repository = "https://github.com/brave-experiments/pagegraph-query.git"

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint"
]

[project.scripts]
pagegraph-query = "pagegraph.cli.run:run"
